2005-02-28 20:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFilePrefsManager.m
	* GormInfo.plist: Bump application version in CVS.

2005-02-28 19:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.9.2
	
2005-02-27 12:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Gorm.texi: Added a question to the FAQ.

2005-02-27 00:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Makefile.postamble: Now generates autogsdoc
	documentation for GormLib and places it in the "InterfaceBuilder"
	directory under Documentation.

2005-02-27 00:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Gorm.texi: Palette documentation.

2005-02-26 22:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Gorm.texi: Updating documentation to contain
	information answering recent questions about encoding.

2005-02-20 12:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: Mapped NSCStringText to NSText.

2005-02-19 02:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* Defaults.plist: Added new default "AllowUserBundles" to 
	disable new code which prevents Gorm from running if a 
	user bundle is present.
	* Gorm.m: Added code in [Gorm applicationDidFinishLaunching:]
	to warn the user and quit, unless the above default is set,
	if there is a user bundle loaded.  It will give the user
	a few panels explaining what's going on.

2005-02-15 23:37 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPosingView.[hm]: Removed.

2005-02-15 23:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Disabled poseAs: and poseAsClass: while in Gorm.
	* Resources/GormClassInspector.gorm
	* Resources/GormFontView.gorm
	* Resources/GormImageInspector.gorm
	* Resources/GormNSSplitViewInspector.gorm
	* Resources/GormPrefGeneral.gorm
	* Resources/GormPrefPalettes.gorm
	* Resources/GormScrollViewAttributesInspector.gorm: made sure that
	all fonts are system fonts.
